--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tatto.</title>
+  <title>Prima Pagină | Tatto.</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="styles/responsive.css" />
   <link rel="stylesheet" type="text/css" href="styles/style.css" />
 </head>
 <body>
@@ -22,10 +21,10 @@
         <a href="#gallery-section">Galerie</a>
       </li>
       <li class="nav-link">
-        <a href="#">Prețuri</a>
+        <a href="#price-section">Prețuri</a>
       </li>
       <li class="nav-link nav-special-link">
-        <a href="#">Fă o programare</a>
+        <a href="/request.html">Fă o programare</a>
       </li>
     </ul>
   </nav>
