list requests: initial commit

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
         </div>
         <div class="gallery-wrapper">
           <app-gallery
-            speed="300ms"
-            auto-increment="false"
+            speed="600ms"
+            animation="ease-in-out"
+            auto-increment="true"
             interval="5000"
           >
             <img src="/img/tatto1.jpg" alt="tatuaj 1" />
