implemented admin list requests

--- a/index.html
+++ b/index.html
@@ -43,30 +43,28 @@
         <p>Tatto este un salon de tatuaje ce are sediul in Bucuresti</p>
       </div>
       <div class="right-side">
-        <img src="/img/tatto1.jpg" />
+        <img src="/img/tatto2.jpg" />
       </div>
     </section>
     <section id="gallery-section" class="section">
       <div class="container">
         <div class="section-title">
           <h2>Galerie</h2>
-          <p>O parte din lucrarile noastre.</p>
+          <p>O parte din lucrările noastre.</p>
         </div>
         <div class="gallery-wrapper">
           <app-gallery
             speed="600ms"
             animation="ease-in-out"
-            auto-increment="true"
+            auto-increment="false"
             interval="5000"
           >
             <img src="/img/tatto1.jpg" alt="tatuaj 1" />
-            <img src="/img/tatto1.jpg" alt="tatuaj 2" />
-            <img src="/img/tatto1.jpg" alt="tatuaj 3" />
-            <img src="/img/tatto1.jpg" alt="tatuaj 4" />
-            <img src="/img/tatto1.jpg" alt="tatuaj 5" />
-            <img src="/img/tatto1.jpg" alt="tatuaj 6" />
-            <img src="/img/tatto1.jpg" alt="tatuaj 7" />
-            <img src="/img/tatto1.jpg" alt="tatuaj 8" />
+            <img src="/img/tatto2.jpg" alt="tatuaj 2" />
+            <img src="/img/tatto3.jpg" alt="tatuaj 3" />
+            <img src="/img/tatto4.jpg" alt="tatuaj 4" />
+            <img src="/img/tatto5.jpg" alt="tatuaj 3" />
+            <img src="/img/tatto6.jpg" alt="tatuaj 4" />
           </app-gallery>
         </div>
       </div>
