--- a/admin.html
+++ b/admin.html
@@ -13,6 +13,11 @@
     <div class="logo">
       <a href="#"><span>T</span>atto.</a>
     </div>
+    <ul class="nav-menu">
+      <li class="nav-link nav-special-link">
+        <a href="/request.html">Delogheaza-te</a>
+      </li>
+    </ul>
   </nav>
 <header class="compact-header">
     <div class="content container">
